# ceda-fbs-cci

./: README.md  install-ceda-fbs.sh  pyproject.toml
ceda_fbs/: __init__.py
ceda_fbs/src/fbs/cmdline/: check_spots.py  display_es_stats.py  get_es_stats.py  make_file_lists.py  run_commands_in_lotus.py  scan_archive.py  scan_dataset.py  scan_logfiles.py
ceda_fbs/src/fbs/proc/: extract.py
ceda_fbs/src/fbs/proc/file_handlers/: badc_csv_file.py  esasafe_file.py  generic_file.py  grib_file.py  handler_picker.py  hdf_file.py  kmz_file.py  metadata_tags_json_file.py  nasaames_file.py  netcdf_file.py  pp_file.py
ceda_fbs/src/test/: file_sampler.py  test_cfg_read.py  test_handler.py  test_handler_picker.py
